<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Xposed Lockscreen Wallpaper</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!--  Lockscreen tweaks -->
    <string name="pref_cat_lockscreen_title">Lockscreen Background</string>
    <string name="pref_cat_lockscreen_summary">Customize your lockscreen\'s background</string>
    <string name="pref_cat_lockscreen_background_title">Lockscreen background</string>
    <string name="pref_lockscreen_background_title">Background style</string>
    <string name="lockscreen_bg_default">Default wallpaper</string>
    <string name="lockscreen_bg_color">Color fill</string>
    <string name="lockscreen_bg_image">Custom image</string>
    <string name="lockscreen_bg_see_through">See through</string>
    <string name="pref_lockscreen_bg_color_title">Set custom color</string>
    <string name="pref_lockscreen_bg_color_summary">Allows to set custom background color for lockscreen</string>
    <string name="pref_lockscreen_bg_image_title">Set custom image</string>
    <string name="pref_lockscreen_bg_image_summary">Allows to set custom background image for lockscreen</string>
    <string name="pref_lockscreen_bg_image_blur">Blur custom image</string>
    <string name="pref_lockscreen_bg_image_blur_summary_off">Custom image will not be blurred</string>
    <string name="pref_lockscreen_bg_image_blur_summary_on">Custom image will be blurred</string>
    <string name="pref_lockscreen_bg_see_through_tint_title">Tinting</string>
    <string name="pref_lockscreen_bg_see_through_tint_dark">Dark</string>
    <string name="pref_lockscreen_bg_see_through_tint_light">Light</string>
    <string name="pref_lockscreen_bg_see_through_tint_none">None</string>
    <string name="lockscreen_background_result_successful">Background changed</string>
    <string name="lockscreen_background_result_not_successful">Background not changed</string>
</resources>